{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 178,
  "lineage": "eb0ec47b-b8eb-75b1-6ebf-639c49df75eb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:loadbalancer/app/ecs-alb/8c7fdb2143059e9f",
            "arn_suffix": "app/ecs-alb/8c7fdb2143059e9f",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-alb-1360527226.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:loadbalancer/app/ecs-alb/8c7fdb2143059e9f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0009e2a630c6dc773"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-036b150e2f3f5dad6"
              },
              {
                "subnet_id": "subnet-0512e86a72a370a43"
              }
            ],
            "subnets": [
              "subnet-036b150e2f3f5dad6",
              "subnet-0512e86a72a370a43"
            ],
            "tags": {
              "Name": "ecs_alb"
            },
            "tags_all": {
              "Name": "ecs_alb"
            },
            "vpc_id": "vpc-0efe239dac6e8d892",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.codepipeline-vpc.aws_eip.nat_eip",
            "module.codepipeline-vpc.aws_nat_gateway.nat",
            "module.codepipeline-vpc.aws_subnet.db_subnets",
            "module.codepipeline-vpc.aws_subnet.was_subnets",
            "module.codepipeline-vpc.aws_subnet.webserver_subnets",
            "module.codepipeline-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ecs_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:listener/app/ecs-alb/8c7fdb2143059e9f/d16e01b4f7fbe7fb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:targetgroup/ecs-green-tg/459698ce9df2fee2",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:listener/app/ecs-alb/8c7fdb2143059e9f/d16e01b4f7fbe7fb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:loadbalancer/app/ecs-alb/8c7fdb2143059e9f",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs_alb",
            "aws_lb_target_group.ecs_tg_green",
            "aws_security_group.alb_sg",
            "module.codepipeline-vpc.aws_eip.nat_eip",
            "module.codepipeline-vpc.aws_nat_gateway.nat",
            "module.codepipeline-vpc.aws_subnet.db_subnets",
            "module.codepipeline-vpc.aws_subnet.was_subnets",
            "module.codepipeline-vpc.aws_subnet.webserver_subnets",
            "module.codepipeline-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_tg_blue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:targetgroup/ecs-blue-tg/f6812d81a948eb0f",
            "arn_suffix": "targetgroup/ecs-blue-tg/f6812d81a948eb0f",
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "3001",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:targetgroup/ecs-blue-tg/f6812d81a948eb0f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-blue-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0efe239dac6e8d892"
          },
          "dependencies": [
            "module.codepipeline-vpc.aws_eip.nat_eip",
            "module.codepipeline-vpc.aws_nat_gateway.nat",
            "module.codepipeline-vpc.aws_subnet.db_subnets",
            "module.codepipeline-vpc.aws_subnet.was_subnets",
            "module.codepipeline-vpc.aws_subnet.webserver_subnets",
            "module.codepipeline-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_tg_green",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:targetgroup/ecs-green-tg/459698ce9df2fee2",
            "arn_suffix": "targetgroup/ecs-green-tg/459698ce9df2fee2",
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "3000",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:targetgroup/ecs-green-tg/459698ce9df2fee2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:182024812696:loadbalancer/app/ecs-alb/8c7fdb2143059e9f"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-green-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0efe239dac6e8d892"
          },
          "dependencies": [
            "module.codepipeline-vpc.aws_eip.nat_eip",
            "module.codepipeline-vpc.aws_nat_gateway.nat",
            "module.codepipeline-vpc.aws_subnet.db_subnets",
            "module.codepipeline-vpc.aws_subnet.was_subnets",
            "module.codepipeline-vpc.aws_subnet.webserver_subnets",
            "module.codepipeline-vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:security-group/sg-0009e2a630c6dc773",
            "description": "alb to sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0009e2a630c6dc773",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_sg",
            "name_prefix": "",
            "owner_id": "182024812696",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb_sg"
            },
            "tags_all": {
              "Name": "alb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efe239dac6e8d892"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.codepipeline-vpc.aws_eip.nat_eip",
            "module.codepipeline-vpc.aws_nat_gateway.nat",
            "module.codepipeline-vpc.aws_subnet.db_subnets",
            "module.codepipeline-vpc.aws_subnet.was_subnets",
            "module.codepipeline-vpc.aws_subnet.webserver_subnets",
            "module.codepipeline-vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:security-group/sg-0b508654e4304e6ac",
            "description": "ecs to sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b508654e4304e6ac",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0009e2a630c6dc773"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "ecs_sg",
            "name_prefix": "",
            "owner_id": "182024812696",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ecs_sg"
            },
            "tags_all": {
              "Name": "ecs_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efe239dac6e8d892"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.codepipeline-vpc.aws_eip.nat_eip",
            "module.codepipeline-vpc.aws_nat_gateway.nat",
            "module.codepipeline-vpc.aws_subnet.db_subnets",
            "module.codepipeline-vpc.aws_subnet.was_subnets",
            "module.codepipeline-vpc.aws_subnet.webserver_subnets",
            "module.codepipeline-vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.codepipeline-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c558fcce1bd6044a",
            "association_id": "eipassoc-0c522818bbb32417d",
            "domain": "vpc",
            "id": "eipalloc-0c558fcce1bd6044a",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-03ab26a7f55c28c10",
            "private_dns": "ip-10-0-1-158.ap-northeast-2.compute.internal",
            "private_ip": "10.0.1.158",
            "public_dns": "ec2-52-79-153-115.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.79.153.115",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cp-nat-eip",
              "Resource": "nat-gateway"
            },
            "tags_all": {
              "Name": "cp-nat-eip",
              "Resource": "nat-gateway"
            },
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.codepipeline-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:internet-gateway/igw-037b46bfff1958730",
            "id": "igw-037b46bfff1958730",
            "owner_id": "182024812696",
            "tags": {
              "Name": "cp-donggyu-igw",
              "Resource": "igw"
            },
            "tags_all": {
              "Name": "cp-donggyu-igw",
              "Resource": "igw"
            },
            "vpc_id": "vpc-0efe239dac6e8d892"
          },
          "dependencies": [
            "module.codepipeline-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.codepipeline-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c558fcce1bd6044a",
            "association_id": "eipassoc-0c522818bbb32417d",
            "connectivity_type": "public",
            "id": "nat-0515ee7bc2c48185b",
            "network_interface_id": "eni-03ab26a7f55c28c10",
            "private_ip": "10.0.1.158",
            "public_ip": "52.79.153.115",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-036b150e2f3f5dad6",
            "tags": {
              "Name": "cp-a-nat",
              "Resource": "nat"
            },
            "tags_all": {
              "Name": "cp-a-nat",
              "Resource": "nat"
            }
          },
          "dependencies": [
            "module.codepipeline-vpc.aws_eip.nat_eip",
            "module.codepipeline-vpc.aws_subnet.webserver_subnets",
            "module.codepipeline-vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.codepipeline-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:route-table/rtb-0b2b464c249238343",
            "id": "rtb-0b2b464c249238343",
            "owner_id": "182024812696",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "cp-db-rt",
              "Resource": "route-table"
            },
            "tags_all": {
              "Name": "cp-db-rt",
              "Resource": "route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efe239dac6e8d892"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.codepipeline-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.codepipeline-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:route-table/rtb-0cfc2f41bab42ece0",
            "id": "rtb-0cfc2f41bab42ece0",
            "owner_id": "182024812696",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0515ee7bc2c48185b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cp-private-rt",
              "Resource": "route-table"
            },
            "tags_all": {
              "Name": "cp-private-rt",
              "Resource": "route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efe239dac6e8d892"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.codepipeline-vpc.aws_eip.nat_eip",
            "module.codepipeline-vpc.aws_nat_gateway.nat",
            "module.codepipeline-vpc.aws_subnet.webserver_subnets",
            "module.codepipeline-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.codepipeline-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:route-table/rtb-0ab77224d30238ffe",
            "id": "rtb-0ab77224d30238ffe",
            "owner_id": "182024812696",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-037b46bfff1958730",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cp-public-rt",
              "Resource": "route-table"
            },
            "tags_all": {
              "Name": "cp-public-rt",
              "Resource": "route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efe239dac6e8d892"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.codepipeline-vpc.aws_internet_gateway.igw",
            "module.codepipeline-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.codepipeline-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-rt-mapping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a2d201a9c70a354",
            "route_table_id": "rtb-0b2b464c249238343",
            "subnet_id": "subnet-063f2a22cf8580eaf"
          },
          "dependencies": [
            "module.codepipeline-vpc.aws_route_table.db_route_table",
            "module.codepipeline-vpc.aws_subnet.db_subnets",
            "module.codepipeline-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0167514f13a649e",
            "route_table_id": "rtb-0b2b464c249238343",
            "subnet_id": "subnet-01d4cf7beafdd8f84"
          },
          "dependencies": [
            "module.codepipeline-vpc.aws_route_table.db_route_table",
            "module.codepipeline-vpc.aws_subnet.db_subnets",
            "module.codepipeline-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.codepipeline-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-mapping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a2332fb308fe98ec",
            "route_table_id": "rtb-0cfc2f41bab42ece0",
            "subnet_id": "subnet-0da33e4bbf8eff622"
          },
          "dependencies": [
            "module.codepipeline-vpc.aws_eip.nat_eip",
            "module.codepipeline-vpc.aws_nat_gateway.nat",
            "module.codepipeline-vpc.aws_route_table.private_route_table",
            "module.codepipeline-vpc.aws_subnet.was_subnets",
            "module.codepipeline-vpc.aws_subnet.webserver_subnets",
            "module.codepipeline-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017078fcc9846e0fe",
            "route_table_id": "rtb-0cfc2f41bab42ece0",
            "subnet_id": "subnet-085c2a6f744e69f1c"
          },
          "dependencies": [
            "module.codepipeline-vpc.aws_eip.nat_eip",
            "module.codepipeline-vpc.aws_nat_gateway.nat",
            "module.codepipeline-vpc.aws_route_table.private_route_table",
            "module.codepipeline-vpc.aws_subnet.was_subnets",
            "module.codepipeline-vpc.aws_subnet.webserver_subnets",
            "module.codepipeline-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.codepipeline-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-mapping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b23d51670a73692",
            "route_table_id": "rtb-0ab77224d30238ffe",
            "subnet_id": "subnet-036b150e2f3f5dad6"
          },
          "dependencies": [
            "module.codepipeline-vpc.aws_internet_gateway.igw",
            "module.codepipeline-vpc.aws_route_table.public_route_table",
            "module.codepipeline-vpc.aws_subnet.webserver_subnets",
            "module.codepipeline-vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f752facc1bd41f2b",
            "route_table_id": "rtb-0ab77224d30238ffe",
            "subnet_id": "subnet-0512e86a72a370a43"
          },
          "dependencies": [
            "module.codepipeline-vpc.aws_internet_gateway.igw",
            "module.codepipeline-vpc.aws_route_table.public_route_table",
            "module.codepipeline-vpc.aws_subnet.webserver_subnets",
            "module.codepipeline-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.codepipeline-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:security-group/sg-0dbfb62e1b7da62e2",
            "description": "endpoint sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbfb62e1b7da62e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "endpoint-private-sg",
            "name_prefix": "",
            "owner_id": "182024812696",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cp-private-sg"
            },
            "tags_all": {
              "Name": "cp-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efe239dac6e8d892"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.codepipeline-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.codepipeline-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:subnet/subnet-063f2a22cf8580eaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.200.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063f2a22cf8580eaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182024812696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cp-donggyu-ap-northeast-2a-db",
              "Property": "db",
              "Resource": "subnet"
            },
            "tags_all": {
              "Name": "cp-donggyu-ap-northeast-2a-db",
              "Property": "db",
              "Resource": "subnet"
            },
            "vpc_id": "vpc-0efe239dac6e8d892"
          },
          "dependencies": [
            "module.codepipeline-vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:subnet/subnet-01d4cf7beafdd8f84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.201.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01d4cf7beafdd8f84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182024812696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cp-donggyu-ap-northeast-2b-db",
              "Property": "db",
              "Resource": "subnet"
            },
            "tags_all": {
              "Name": "cp-donggyu-ap-northeast-2b-db",
              "Property": "db",
              "Resource": "subnet"
            },
            "vpc_id": "vpc-0efe239dac6e8d892"
          },
          "dependencies": [
            "module.codepipeline-vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.codepipeline-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "was_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:subnet/subnet-0da33e4bbf8eff622",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da33e4bbf8eff622",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182024812696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cp-donggyu-ap-northeast-2a-was",
              "Property": "was",
              "Resource": "subnet"
            },
            "tags_all": {
              "Name": "cp-donggyu-ap-northeast-2a-was",
              "Property": "was",
              "Resource": "subnet"
            },
            "vpc_id": "vpc-0efe239dac6e8d892"
          },
          "dependencies": [
            "module.codepipeline-vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:subnet/subnet-085c2a6f744e69f1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085c2a6f744e69f1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182024812696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cp-donggyu-ap-northeast-2b-was",
              "Property": "was",
              "Resource": "subnet"
            },
            "tags_all": {
              "Name": "cp-donggyu-ap-northeast-2b-was",
              "Property": "was",
              "Resource": "subnet"
            },
            "vpc_id": "vpc-0efe239dac6e8d892"
          },
          "dependencies": [
            "module.codepipeline-vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.codepipeline-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "webserver_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:subnet/subnet-036b150e2f3f5dad6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036b150e2f3f5dad6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182024812696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cp-donggyu-ap-northeast-2a-webserver",
              "Property": "webserver",
              "Resource": "subnet"
            },
            "tags_all": {
              "Name": "cp-donggyu-ap-northeast-2a-webserver",
              "Property": "webserver",
              "Resource": "subnet"
            },
            "vpc_id": "vpc-0efe239dac6e8d892"
          },
          "dependencies": [
            "module.codepipeline-vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:subnet/subnet-0512e86a72a370a43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0512e86a72a370a43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "182024812696",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cp-donggyu-ap-northeast-2b-webserver",
              "Property": "webserver",
              "Resource": "subnet"
            },
            "tags_all": {
              "Name": "cp-donggyu-ap-northeast-2b-webserver",
              "Property": "webserver",
              "Resource": "subnet"
            },
            "vpc_id": "vpc-0efe239dac6e8d892"
          },
          "dependencies": [
            "module.codepipeline-vpc.aws_vpc.vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.codepipeline-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:vpc/vpc-0efe239dac6e8d892",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f8f16df37b6af752",
            "default_route_table_id": "rtb-0c17bf83553548574",
            "default_security_group_id": "sg-085e02d8a5dbefb65",
            "dhcp_options_id": "dopt-00db6602bf8d3ab9d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0efe239dac6e8d892",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c17bf83553548574",
            "owner_id": "182024812696",
            "tags": {
              "Name": "cp-donggyu",
              "Resource": "vpc"
            },
            "tags_all": {
              "Name": "cp-donggyu",
              "Resource": "vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.codepipeline-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_endpoint_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:vpc-endpoint/vpce-0b21252fbb3959174",
            "dns_entry": [
              {
                "dns_name": "vpce-0b21252fbb3959174-aow3mcpu.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0b21252fbb3959174-aow3mcpu-ap-northeast-2b.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0b21252fbb3959174-aow3mcpu-ap-northeast-2a.api.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "api.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z07616512G7X90WIXR1L0"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b21252fbb3959174",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0994e43a56dcedf5a",
              "eni-0efb8574184270bdd"
            ],
            "owner_id": "182024812696",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0dbfb62e1b7da62e2"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecr.api",
            "state": "available",
            "subnet_ids": [
              "subnet-085c2a6f744e69f1c",
              "subnet-0da33e4bbf8eff622"
            ],
            "tags": {
              "Name": "cp-endpoint-ecr-api"
            },
            "tags_all": {
              "Name": "cp-endpoint-ecr-api"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0efe239dac6e8d892"
          },
          "dependencies": [
            "module.codepipeline-vpc.aws_security_group.private_sg",
            "module.codepipeline-vpc.aws_subnet.was_subnets",
            "module.codepipeline-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.codepipeline-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_endpoint_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:vpc-endpoint/vpce-076cef85cd465da3c",
            "dns_entry": [
              {
                "dns_name": "vpce-076cef85cd465da3c-grzdr0rt.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-076cef85cd465da3c-grzdr0rt-ap-northeast-2b.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-076cef85cd465da3c-grzdr0rt-ap-northeast-2a.dkr.ecr.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "dkr.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z076164916UG1WREFI06F"
              },
              {
                "dns_name": "*.dkr.ecr.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z076164916UG1WREFI06F"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-076cef85cd465da3c",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08f81fc3277e0d573",
              "eni-0995d01c7fd78d3e6"
            ],
            "owner_id": "182024812696",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0dbfb62e1b7da62e2"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.ecr.dkr",
            "state": "available",
            "subnet_ids": [
              "subnet-085c2a6f744e69f1c",
              "subnet-0da33e4bbf8eff622"
            ],
            "tags": {
              "Name": "cp-endpoint-ecr-dkr"
            },
            "tags_all": {
              "Name": "cp-endpoint-ecr-dkr"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0efe239dac6e8d892"
          },
          "dependencies": [
            "module.codepipeline-vpc.aws_security_group.private_sg",
            "module.codepipeline-vpc.aws_subnet.was_subnets",
            "module.codepipeline-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.codepipeline-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_endpoint_logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:vpc-endpoint/vpce-0cf5d6b32faf6f3cb",
            "dns_entry": [
              {
                "dns_name": "vpce-0cf5d6b32faf6f3cb-mdo45vck.logs.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0cf5d6b32faf6f3cb-mdo45vck-ap-northeast-2b.logs.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-0cf5d6b32faf6f3cb-mdo45vck-ap-northeast-2a.logs.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "logs.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z07616123LNPOVD8DR9YZ"
              },
              {
                "dns_name": "logs.ap-northeast-2.api.aws",
                "hosted_zone_id": "Z07598063AV924TVLLFA6"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cf5d6b32faf6f3cb",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04b0f2f3fbb81fc47",
              "eni-0d5f059f3573b4576"
            ],
            "owner_id": "182024812696",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0dbfb62e1b7da62e2"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.logs",
            "state": "available",
            "subnet_ids": [
              "subnet-085c2a6f744e69f1c",
              "subnet-0da33e4bbf8eff622"
            ],
            "tags": {
              "Name": "cp-endpoint-ecr-logs"
            },
            "tags_all": {
              "Name": "cp-endpoint-ecr-logs"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0efe239dac6e8d892"
          },
          "dependencies": [
            "module.codepipeline-vpc.aws_security_group.private_sg",
            "module.codepipeline-vpc.aws_subnet.was_subnets",
            "module.codepipeline-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.codepipeline-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "endpoint_codepipeline",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:vpc-endpoint/vpce-006934ded9893b6fd",
            "dns_entry": [
              {
                "dns_name": "vpce-006934ded9893b6fd-iq5z91ef.codepipeline.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-006934ded9893b6fd-iq5z91ef-ap-northeast-2a.codepipeline.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "vpce-006934ded9893b6fd-iq5z91ef-ap-northeast-2b.codepipeline.ap-northeast-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z27UANNT0PRK1T"
              },
              {
                "dns_name": "codepipeline.ap-northeast-2.amazonaws.com",
                "hosted_zone_id": "Z01717061WCSPVLTTR1M0"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-006934ded9893b6fd",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0021dab238fedb8a6",
              "eni-0e91625c8b19d2e6e"
            ],
            "owner_id": "182024812696",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0dbfb62e1b7da62e2"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.codepipeline",
            "state": "available",
            "subnet_ids": [
              "subnet-085c2a6f744e69f1c",
              "subnet-0da33e4bbf8eff622"
            ],
            "tags": {
              "Name": "cp-endpoint-codepipeline"
            },
            "tags_all": {
              "Name": "cp-endpoint-codepipeline"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0efe239dac6e8d892"
          },
          "dependencies": [
            "module.codepipeline-vpc.aws_security_group.private_sg",
            "module.codepipeline-vpc.aws_subnet.was_subnets",
            "module.codepipeline-vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.codepipeline-vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "vpce_s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:182024812696:vpc-endpoint/vpce-094bbdb67a8297020",
            "cidr_blocks": [
              "52.219.202.0/23",
              "52.219.144.0/22",
              "52.219.204.0/22",
              "3.5.144.0/23",
              "3.5.140.0/22",
              "52.219.148.0/23",
              "52.219.60.0/23",
              "3.5.184.0/21",
              "52.219.56.0/22"
            ],
            "id": "vpce-094bbdb67a8297020",
            "owner_id": "182024812696",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-78a54011",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0cfc2f41bab42ece0"
            ],
            "service_name": "com.amazonaws.ap-northeast-2.s3",
            "state": "available",
            "tags": {
              "Name": "cp-endpoint-s3"
            },
            "tags_all": {
              "Name": "cp-endpoint-s3"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0efe239dac6e8d892"
          },
          "dependencies": [
            "module.codepipeline-vpc.aws_eip.nat_eip",
            "module.codepipeline-vpc.aws_nat_gateway.nat",
            "module.codepipeline-vpc.aws_route_table.private_route_table",
            "module.codepipeline-vpc.aws_subnet.webserver_subnets",
            "module.codepipeline-vpc.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}